--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 </div>
 
-<div class="container-fluid mt-5" id="main" style="display:none">
+<div class="container-fluid mt-5" id="main" style="displayx:none">
 <div class="row">
 
 		<!-- Left Column -->
@@ -114,10 +114,13 @@
 
 				<div class="card-body" >
 					<p class="card-text">This are the list of Childres that live in difcult invinronment . Please donate for them to save their life.</p>
-					<div id="child-list"></div>
+					<div id="child-list">
+                    
+
+                    </div>
 				</div>
 			</div>
-</div>
+ </div>
 			
 
 
@@ -126,14 +129,27 @@
 </div>
       <script id="template" type="x-tmpl-mustache">
       {{#partArray}}
-         <div class="card mt-2 bg-info">
-            <div class="card-header">
-              {{name}} [{{owner}}]
-            </div>
+        <div class="card" style="width:300px">
+            <img class="card-img-top" src="{{url}}" height="200" alt="Card image">
             <div class="card-body">
-               {{asset}}
-            </div>
-          </div>
+             <h4 class="card-title">Name: {{name}}</h4>
+             <p class="card-text">Location: {{location}}</p>
+             <p class="card-text">Total:: {{total}} AE</p>
+              <div class="row">
+                <div class="col-sm-12">
+                 <div class="form-group">
+                   <label for="">Amout</label>
+                   <input type="text" name="amounr" id="" class="form-control" placeholder="Amount" aria-describedby="amount">
+                </div>
+               </div>
+               <div class="col-sm-12">
+                 <div class="form-group">
+                  <button type="button" id="donateBtn" class="btn btn-primary float-right" col-sm-6>Donate</button>
+                </div>
+             </div>
+         </div>
+      </div>
+   </div>
       {{/partArray}}
       </script>
     <!-- Optional JavaScript -->
