--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 </div>
 
-<div class="container-fluid mt-5" id="main" style="displayx:none">
+<div class="container-fluid mt-5" id="main" style="display:none">
 <div class="row">
 
 		<!-- Left Column -->
