--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   
 </div>
       <script id="template" type="x-tmpl-mustache">
-      {{#partArray}}
+      {{#childsArray}}
         <div class="card" style="width:300px">
             <img class="card-img-top" src="{{url}}" height="200" alt="Card image">
             <div class="card-body">
@@ -150,7 +150,7 @@
          </div>
       </div>
    </div>
-      {{/partArray}}
+      {{/childsArray}}
       </script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
