--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
             <div class="card-body">
              <h4 class="card-title">Name: {{name}}</h4>
              <p class="card-text">Location: {{location}}</p>
-             <p class="card-text">Total:: {{total}} AE</p>
+             <p class="card-text">Total:: {{amount}} AE</p>
               <div class="row">
                 <div class="col-sm-12">
                  <div class="form-group">
-                   <label for="">Amout</label>
-                   <input type="text" name="amounr" id="" class="form-control" placeholder="Amount" aria-describedby="amount">
+                   <label for="">Donate:</label>
+                   <input type="text" name="amount" id="" class="form-control" placeholder="Amount in AE" aria-describedby="amount">
                 </div>
                </div>
                <div class="col-sm-12">
