--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
                 <div class="col-sm-12">
                  <div class="form-group">
                    <label for="">Donate:</label>
-                   <input type="text" name="amount" id="" class="form-control" placeholder="Amount in AE" aria-describedby="amount">
+                   <input type="text" name="amount" id={{index}}  class="form-control" placeholder="Amount in AE" aria-describedby="amount">
                 </div>
                </div>
                <div class="col-sm-12">
                  <div class="form-group">
-                  <button type="button" id="donateBtn" class="btn btn-primary float-right" col-sm-6>Donate</button>
+                  <button type="button"  class="btn btn-primary float-right donateBtn" id={{index}}>Donate</button>
                 </div>
              </div>
          </div>
