--- a/index.html
+++ b/index.html
@@ -132,19 +132,20 @@
         <div class="card" style="width:300px">
             <img class="card-img-top" src="{{url}}" height="200" alt="Card image">
             <div class="card-body">
-             <h4 class="card-title">Name: {{name}}</h4>
+             <h4 class="card-title">Name  : {{name}}</h4>
              <p class="card-text">Location: {{location}}</p>
-             <p class="card-text">Total:: {{amount}} AE</p>
+             <p class="card-text">Age     : {{age}}</p>
+             <p class="card-text">Total   : {{amount}} AE</p>
               <div class="row">
                 <div class="col-sm-12">
                  <div class="form-group">
                    <label for="">Donate:</label>
-                   <input type="text" name="amount" id={{index}}  class="form-control" placeholder="Amount in AE" aria-describedby="amount">
+                   <input type="text" name="amount" id={{id}}  class="form-control" placeholder="Amount in AE" aria-describedby="amount">
                 </div>
                </div>
                <div class="col-sm-12">
                  <div class="form-group">
-                  <button type="button"  class="btn btn-primary float-right donateBtn" id={{index}}>Donate</button>
+                  <button type="button"  class="btn btn-primary float-right donateBtn" id={{id}}>Donate</button>
                 </div>
              </div>
          </div>
