--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
 	<!-- Text Panel -->
 			<div class="card">
 				<div class="card-header p-b-0">
-					<h5 class="card-title"><i class="fa fa-cog" aria-hidden="true"></i> Donate</h5>
+					<h5 class="card-title"><i class="fa fa-cog" aria-hidden="true"></i> Donate & Save life</h5>
 				</div>
 
 				<div class="card-body" >
-					<p class="card-text">This are the list of Childres that live in difcult invinronment . Please donate for them to save their life.</p>
+					<p class="card-text">This are the list of Children that live in dificult invinronment . Please donate for them to save their life.</p>
 					<div id="child-list">
                     
 
