--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 </div>
 
-<div class="container-fluid mt-5" id="main" style="display:none">
+<div class="container-fluid mt-5" id="main" style="displayX:none">
 <div class="row">
 
 		<!-- Left Column -->
@@ -135,7 +135,15 @@
              <h4 class="card-title">Name  : {{name}}</h4>
              <p class="card-text">Location: {{location}}</p>
              <p class="card-text">Age     : {{age}}</p>
-             <p class="card-text">Total   : {{amount}} AE</p>
+             <div class="card-text">Total   : {{amount}} AE</p>
+              <div class="card-text">
+              {{#isOpened}}
+                Status : <h1>OPENDE</hi>
+             {{/isOpened}}
+             {{^isOpened}}
+                 Status : <h1 class="red">CLOSED</hi>
+             {{/isOpened}}
+              </div>
               <div class="row">
                 <div class="col-sm-12">
                  <div class="form-group">
@@ -149,6 +157,18 @@
                 </div>
              </div>
          </div>
+      </div>
+      <div class="card-footer">
+      <div class="row">
+      <div class="col-sm-12 float-right">
+                 <div class="form-group">
+                  <button type="button"  class="btn btn-success float-right openBtn" id={{id}}>Open Donatiton</button>
+                </div>
+                <div class="form-group">
+                  <button type="button"  class="btn btn-danger float-right closeBtn" id={{id}}>Close Donation</button>
+                </div>
+             </div>
+      </div>
       </div>
    </div>
       {{/childsArray}}
