--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <link rel="stylesheet" href="assets/css/scrollbar.css" >
     <style>
     #loader{
-        width: 100%;
-        position:absolute;
+      position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
         {% comment %} background-color:blue; {% endcomment %}
     }
     </style>
