--- a/index.html
+++ b/index.html
@@ -9,17 +9,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
     <link rel="stylesheet" href="assets/css/scrollbar.css" >
-    <style>
-    #loader{
-      position: fixed;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
-        {% comment %} background-color:blue; {% endcomment %}
-    }
-    </style>
+    <link rel="stylesheet" href="assets/css/loader.css" >    
+   
+    
   <body >
     <div id="scrollbar">
     
