--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <script src="assets/js/popper.min.js" ></script>
     <script src="assets/js/bootstrap.min.js" ></script>
     <script src="assets/js/mustache.min.js" ></script>
-    <script src="https://unpkg.com/@aeternity/aepp-sdk/dist/aepp-sdk.browser-script.js"></script>
+    <script src="https://unpkg.com/@aeternity/aepp-sdk@6.1.2/dist/aepp-sdk.browser-script.js"></script>
     <script src="main.js"></script>
 
 </body>
